# IGESio

./: .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  README_ja.md  THIRD_PARTY_LICENSES.md  build.bat  build.sh
examples/: CMakeLists.txt  geometric_properties.cpp  iges_data_from_scratch.cpp  iges_data_io.cpp  intermediate_data_io.cpp  sample_curves.cpp  sample_surfaces.cpp  special_swept_surfaces.cpp
examples/data/: input.igs  sample_curves.igs
examples/gui/: CMakeLists.txt  curves_viewer.cpp  iges_viewer.cpp  iges_viewer_gui.cpp  iges_viewer_gui.h  input_config.h
src/: CMakeLists.txt  reader.cpp  writer.cpp
src/common/: CMakeLists.txt  id_generator.cpp  iges_metadata.cpp  iges_parameter_vector.cpp  serialization.cpp  tolerance.cpp  validation_result.cpp  versions.cpp
src/entities/: CMakeLists.txt  directory_entry_param.cpp  entity_base.cpp  entity_parameter_data.cpp  entity_type.cpp  factory.cpp  mesh_entity.cpp  pd.cpp
src/entities/curves/: algorithms.cpp  circular_arc.cpp  composite_curve.cpp  conic_arc.cpp  copious_data.cpp  copious_data_base.cpp  curve_on_a_parametric_surface.cpp  line.cpp  linear_path.cpp  nurbs_algorithms.cpp  nurbs_basis_function.h  parametric_spline_curve.cpp  point.cpp  rational_b_spline_curve.cpp
src/entities/de/: de_color.cpp  de_label_display_associativity.cpp  de_level.cpp  de_line_font_pattern.cpp  de_structure.cpp  de_transformation_matrix.cpp  de_view.cpp  raw_entity_de.cpp
src/entities/interfaces/: i_curve.cpp  i_geometry.cpp  i_restricted_surface.cpp  i_surface.cpp
src/entities/meshes/: mesh_entity.cpp
src/entities/structures/: color_definition.cpp  null_entity.cpp  unsupported_entity.cpp
src/entities/surfaces/: plane.cpp  rational_b_spline_surface.cpp  ruled_surface.cpp  surface_of_revolution.cpp  tabulated_cylinder.cpp  trimmed_surface.cpp
src/entities/transformations/: transformation_matrix.cpp
src/entities/views/: curve_view.cpp  surface_view.cpp
src/extensions/: CMakeLists.txt
src/extensions/inspection/: coordinate_frame_group.cpp  coordinate_frame_group_graphics.cpp
src/extensions/stl/: stl_io.cpp
src/graphics/: CMakeLists.txt  factory.cpp  graphics_registry.cpp  renderer.cpp  shader_registry.cpp  shaders.h
src/graphics/core/: camera.cpp  i_entity_graphics.cpp  open_gl.cpp  pick_registry.cpp  ray.cpp  surface_edge_buffer.cpp  texture.cpp  type_conversion_utils.h
src/graphics/curves/: circular_arc_graphics.cpp  composite_curve_graphics.cpp  conic_arc_graphics.cpp  copious_data_graphics.cpp  curve_on_a_parametric_surface_graphics.cpp  i_curve_graphics.cpp  line_graphics.cpp  point_graphics.cpp  rational_b_spline_curve_graphics.cpp
src/graphics/meshes/: triangle_mesh_graphics.cpp
src/graphics/shaders/: curves.h  shader_code.h  surfaces.h
src/graphics/surfaces/: i_surface_graphics.cpp  rational_b_spline_surface_graphics.cpp  restricted_surface_graphics.cpp  surface_mesh.cpp  trimmed_surface_graphics.cpp
src/models/: CMakeLists.txt  assembly.cpp  flatten.cpp  global_param.cpp  iges_data.cpp  scene.cpp  selection_set.cpp
src/numerics/: CMakeLists.txt  bounding_box.cpp  combinatorics.cpp  integration.cpp  optimization_impl.h  optimize.cpp  polygon.cpp  tolerance.cpp
src/numerics/analysis/: integration.cpp  optimization.cpp  optimization_impl.h
src/numerics/core/: combinatorics.cpp  tolerance.cpp
src/numerics/geometric/: bounding_box.cpp  polygon.cpp
src/utils/: CMakeLists.txt  iges_binary_reader.cpp  iges_string_utils.cpp
tests/: CMakeLists.txt  test_reader.cpp  test_writer.cpp
tests/common/: CMakeLists.txt  test_errors.cpp  test_id_generator.cpp  test_iges_metadata.cpp  test_iges_parameter_vector.cpp  test_matrix.cpp  test_parallel.cpp  test_serialization_FromIgesXxx.cpp  test_serialization_ToIgesXxx.cpp  test_tolerance.cpp  test_validation_result.cpp  test_versions.cpp
tests/entities/: CMakeLists.txt  test_directory_entry_param.cpp  test_entity_base.cpp  test_entity_parameter_data.cpp  test_entity_type.cpp  test_factory.cpp  test_geometry_revision.cpp  test_mesh_entity.cpp  test_pointer_container.cpp
tests/entities/curves/: curves_for_testing.h  test_algorithms.cpp  test_circular_arc.cpp  test_composite_curve.cpp  test_composite_curve_edit.cpp  test_conic_arc.cpp  test_copious_data.cpp  test_curve_line_intersection.cpp  test_curve_on_a_parametric_surface.cpp  test_i_curve.cpp  test_line.cpp  test_linear_path.cpp  test_nurbs_approximation_algorithms.cpp  test_parametric_spline_curve.cpp  test_point.cpp  test_rational_b_spline_curve.cpp  test_rational_b_spline_curve_edit.cpp  test_signed_curvature.cpp
tests/entities/de/: de_test_core.h  test_de_color.cpp  test_de_level.cpp  test_de_line_font_pattern.cpp  test_raw_entity_de.cpp  test_raw_entity_de_is_valid.cpp
tests/entities/meshes/: test_mesh_entity.cpp
tests/extensions/: CMakeLists.txt  test_obj_io.cpp  test_stl_io.cpp
tests/graphics/: CMakeLists.txt  mock_open_gl.h  test_composite_render.cpp  test_graphics_registry.cpp  test_mesh_staging.cpp  test_override_pull.cpp  test_pick_registry.cpp  test_picking_reconcile.cpp  test_renderer_smoke.cpp  test_scene_reconcile.cpp  test_scene_walk.cpp  test_selection_pull.cpp  test_shader_registry.cpp  test_surface_edge_render.cpp  test_surface_mesh.cpp  test_triangle_mesh_render.cpp
tests/models/: CMakeLists.txt  test_assembly.cpp  test_assembly_coords.cpp  test_flatten.cpp  test_global_param.cpp  test_initial_tree.cpp  test_non_iges_entity.cpp  test_scene.cpp  test_selection_set.cpp
tests/numerics/: CMakeLists.txt  test_bounding_box.cpp  test_combinatorics.cpp  test_constexpr_math.cpp  test_integration.cpp  test_matrix.cpp  test_mesh_line_intersection.cpp  test_optimization.cpp  test_polygon.cpp  test_tolerance.cpp  test_triangle_mesh.cpp
tests/test_data/: first_line_82_cols.iges  first_line_without_80_cols.iges  up_to_line_7_of_DE_section.iges
tests/utils/: CMakeLists.txt  test_iges_binary_reader.cpp  test_iges_string_utils_basic.cpp  test_iges_string_utils_global_section.cpp  test_iges_string_utils_line_assertion.cpp  test_iges_string_utils_serialization.cpp
(+293 files in other folders)
